[improve][server] Refactor AddaxServer and TaskService for improved readability and maintainability